Bildervon WS_DST und so...

--- a/ElMasch.tex
+++ b/ElMasch.tex
@@ -147,7 +147,7 @@ Abbildung \arabic{abbildungen}: #3
 	\renewcommand{\arraystretch}{1}	
 	
 	\subsection{Übersicht über Motorenarten}
-		\abb{Bilder/uebersicht_el.png}{11cm}{Prinzipieller Aufbau El. Maschinen}
+		\abb{images/uebersicht_el.png}{11cm}{Prinzipieller Aufbau El. Maschinen}
 
 \section{Gleichstrommaschinen (GSM)}
 	\subsection{Funktionsprinzip}
@@ -157,18 +157,18 @@ Abbildung \arabic{abbildungen}: #3
 		eine maximal halbe Drehung versetzt.
 		Danach muss man den Schleifenstrom umpolisieren, um die Drehung weiter zu
 		führen.\\
-		\abb{Bilder/GSM_Funktion.png}{14cm}{Funktion eines GSM mit Stromwender}
-		\abb{Bilder/GSM_Ersatz.png}{14cm}{Erstzschema der 4 Schaltungsarten}
+		\abb{images/GSM_Funktion.png}{14cm}{Funktion eines GSM mit Stromwender}
+		\abb{images/GSM_Ersatz.png}{14cm}{Erstzschema der 4 Schaltungsarten}
 		A1,A2: Ankerwicklung, B1,B2: Wendepolwicklung, C1,C2: Kompensationswicklung, \\
 		D1,D2: Reihenschlusswicklung, E1,E2: Nebenschlusswicklung, F1,F2: Fremderregte Wicklung
 		
 		Um ein gleichmässiges Drehmoment erreichen zu können, kann folgende Wicklung
 		angewendet werden\\
 		\begin{minipage}{10cm}
-			\abb{Bilder/GSM_Wicklungen}{9.5cm}{Entstehung eienr Schleifenwicklung}
+			\abb{images/GSM_Wicklungen}{9.5cm}{Entstehung eienr Schleifenwicklung}
 		\end{minipage}
 		\begin{minipage}{7cm}
-			\abb{Bilder/GSM_Drehmomentdarstellung}{6.5cm}{Alle Drehmomente
+			\abb{images/GSM_Drehmomentdarstellung}{6.5cm}{Alle Drehmomente
 			zusammen ergeben ein gleichmässiges Drehmoment}
 		\end{minipage}
 		
@@ -218,7 +218,7 @@ Abbildung \arabic{abbildungen}: #3
 		%\subsection{Entstehung des Drehstrom-Systems}
 			\begin{tabular}{p{8.5cm}p{9cm}}
 	        	\begin{minipage}{8cm}
-	            	\includegraphics[width=7.5cm]{../WS_DST/bilder/Drehstrom.png}
+	            	\includegraphics[width=7.5cm]{images/Drehstrom.png}
 	            \end{minipage} &
 				\begin{minipage}{10cm}
 	            	Zeiger drehen mit $\omega t$ im Gegenuhrzeigersinn ($\omega > 0$). \\
@@ -248,8 +248,8 @@ Abbildung \arabic{abbildungen}: #3
 		 			\vspace{0.2cm}
 		 				%\textbf{Zeigerdiagramm} & & \\
 		 				&
-		 					\includegraphics[width=5cm]{../WS_DST/bilder/Sternspannung.png} &
-		 					\includegraphics[width=5cm]{../WS_DST/bilder/Dreieckstrom.png} \\
+		 					\includegraphics[width=5cm]{images/Sternspannung.png} &
+		 					\includegraphics[width=5cm]{images/Dreieckstrom.png} \\
 	
 			 			Verkettete Spannung &
 			 				$U = U_{Str} \cdot \sqrt{3}$ \hspace{0.2cm} $\underline{U} = \underline{U}_{Str} \cdot \sqrt{3} \cdot e^{j 30^\circ}$ &
@@ -277,7 +277,7 @@ Abbildung \arabic{abbildungen}: #3
 % 	        \subsubsection{Ausfall des Neutralleiters: Bestimmung des Y-Punktes mittels Leitwert-Operatoren}
 % 	            \begin{tabular}{p{5cm}p{13cm}}
 % 	            	\begin{minipage}{8cm}
-% 	                	\includegraphics[width=5cm]{../WS_DST/bilder/ZeigerdarstellungVerschobenerSternpunkt.png}
+% 	                	\includegraphics[width=5cm]{images/ZeigerdarstellungVerschobenerSternpunkt.png}
 % 	                \end{minipage} &
 % 					\begin{minipage}{13cm}
 % 	                	$\underline{U}_{12} = \underline{U}_{1N'} - \underline{U}_{2N'}$ \hspace{0.3cm}
@@ -323,7 +323,7 @@ Abbildung \arabic{abbildungen}: #3
 		\subsubsection{Stern-Dreieck-Umwandlung}% \formelbuch{18}}
 		%\begin{figure}
 		  \begin{minipage}[lt]{7.5 cm}
-		    \includegraphics[width=6cm]{../WS_DST/bilder/stern-dreieck.png}
+		    \includegraphics[width=6cm]{images/stern-dreieck.png}
 		  \end{minipage}
 		  \begin{minipage}[rt]{9.35 cm} %BASTEL!!
 	      \renewcommand{\arraystretch}{2}
@@ -345,7 +345,7 @@ Abbildung \arabic{abbildungen}: #3
 	
 	\subsection{Feld in einer Drehstrommaschine}
 		\begin{minipage}{7cm}
-   			\abb{Bilder/Drehfeld.png}{6cm}{Entstehung eines Drehfeldes in einem
+   			\abb{images/Drehfeld.png}{6cm}{Entstehung eines Drehfeldes in einem
    			elMaschine}
         \end{minipage}
 		\begin{minipage}{11cm}
@@ -364,7 +364,7 @@ Abbildung \arabic{abbildungen}: #3
 				0 $<$ s $<$ 1
 			\end{minipage}
 			\begin{minipage}{9cm}
-				\abb{Bilder/Schlupfgerade.png}{4cm}{Schlupfgerade}
+				\abb{images/Schlupfgerade.png}{4cm}{Schlupfgerade}
 			\end{minipage}
 	
 \newpage
@@ -374,7 +374,7 @@ Abbildung \arabic{abbildungen}: #3
 
 \section{Drehstrom- Synchronmaschinen(DSM)}
 	\subsection{Aufbau der DSM}
-		\includegraphics[width=12cm]{./Bilder/Aufbau_DSM.png}\\
+		\includegraphics[width=12cm]{./images/Aufbau_DSM.png}\\
 		\begin{tabular}{ p{1cm} p{4cm} p{10cm}}
 			- & Innenpolmaschine: & Der Läufer ist ein Dauermagnet, oder wird mit
 			Gleichstrom und über Schleifer zu einem solchem gemacht. Dieser läuft mit dem aussen
@@ -388,7 +388,7 @@ Abbildung \arabic{abbildungen}: #3
 		\end{tabular}
 	\subsection{Ersatzschaltbild}
 		\begin{minipage}{11cm}
-			\abb{Bilder/Ersatz_DSM.png}{8cm}{Ersatzschaltung DSM}    
+			\abb{images/Ersatz_DSM.png}{8cm}{Ersatzschaltung DSM}    
 			Es gibt 2 Unterteilungen:\\
 			\begin{tabular}{p{1cm} p{9cm}}
 			    -& Wirkleistung: Gibt die DSM leistung ab oder nimmt sie auf. Zu erkennen
@@ -400,14 +400,14 @@ Abbildung \arabic{abbildungen}: #3
 			\end{tabular}
 	    \end{minipage}
 		\begin{minipage}{8cm}
-	    	\abb{Bilder/Zeigerdiagram.png}{6cm}{Betriebszustände einer DSM}
+	    	\abb{images/Zeigerdiagram.png}{6cm}{Betriebszustände einer DSM}
 	    \end{minipage}\\
 	
 	\subsection{Betriebsverhalten}
  		\begin{tabular}{l l l l}
  	        Leerlauf&	
  	        \begin{minipage}{5cm}
- 	        	\abb{Bilder/Leerlaufkennlinie.png}{4cm}{Im Betriebspunkt
+ 	        	\abb{images/Leerlaufkennlinie.png}{4cm}{Im Betriebspunkt
  	        	liniarisierte Leerlaufgerade}
  	        \end{minipage} &
  			$I_E = \frac{U_P \cdot \sqrt{3} \cdot I_{E0N}}{U_N}$ &
@@ -422,7 +422,7 @@ Abbildung \arabic{abbildungen}: #3
 		\begin{tabular}{l l l l}
  			Kurzschluss &
  			\begin{minipage}{5cm}
-             	\abb{Bilder/Kurzschlussgerade.png}{4cm}{Kurzschlussgerade}
+             	\abb{images/Kurzschlussgerade.png}{4cm}{Kurzschlussgerade}
             \end{minipage}&
  			$X_d=\frac{U_P}{I_{K0}}$ &
  			\begin{minipage}{9cm}
@@ -436,10 +436,10 @@ Abbildung \arabic{abbildungen}: #3
 		\subsubsection{Inselbetrieb}
 			\begin{minipage}{10cm}
             
-            	\abb{Bilder/Belastungskennlinie_DSM.png}{9cm}{Belastungskennlinie bei konst. Erregerstrom}
+            	\abb{images/Belastungskennlinie_DSM.png}{9cm}{Belastungskennlinie bei konst. Erregerstrom}
             \end{minipage}
 			\begin{minipage}{6cm}
-            	\abb{Bilder/Regulierungslinie_DSM.png}{6cm}{Regulierungskennlinie
+            	\abb{images/Regulierungslinie_DSM.png}{6cm}{Regulierungskennlinie
             	für konst. $U_{Kl}$}
             \end{minipage}\\
 			Die Klemmenspannung nimmt bei kapazitiven Lasten zu, bei induktiven stark
@@ -453,7 +453,7 @@ Abbildung \arabic{abbildungen}: #3
 			Hilfe von $I_E$ und der mechanischen Leistung der Blindstromanteil
 			eingestellt werden:\\
 			\begin{minipage}{8.2cm}
-            	\abb{Bilder/Ortskurve_DSM.png}{8cm}{Ortskurve einer DSM im starren
+            	\abb{images/Ortskurve_DSM.png}{8cm}{Ortskurve einer DSM im starren
             	Netz}
             \end{minipage}
 			\begin{minipage}{9.7cm}
@@ -523,7 +523,7 @@ Abbildung \arabic{abbildungen}: #3
 		(Lastwiderstand) ist die mechanische Last. Das heisst die Verlustleistung
 	 über dem Widerstand ist die Mechanische Nutzleistung (minus die
 	 Reibungsverluste). Diese ist, wie man sieht von dem Schlupf abhnängig.
-		\abb{Bilder/ersatzschaltbild_DAM}{12cm}{Ersatzschaltbild des DAM mit Last}
+		\abb{images/ersatzschaltbild_DAM}{12cm}{Ersatzschaltbild des DAM mit Last}
 		
 	für Dreieckschaltung:\\
 	\begin{tabular}{p{3cm} p{13cm}}
@@ -536,7 +536,7 @@ Abbildung \arabic{abbildungen}: #3
 	       
 	\subsection{Drehmomentkennlinie}
 		\begin{minipage}{5cm}
-        	\abb{Bilder/Drehmomentkenn_DAM.png}{5cm}{$M = f(s)$}   
+        	\abb{images/Drehmomentkenn_DAM.png}{5cm}{$M = f(s)$}   
         \end{minipage}
 		\begin{minipage}{13cm}
         	$M_K = Kippmoment = Maximales Drehmoment$\\
@@ -552,11 +552,11 @@ Abbildung \arabic{abbildungen}: #3
 \newpage
 	\subsection{Ortskurve des DAM, Heyland- Kreis}
 	\begin{minipage}{9cm}
-    	\abb{Bilder/Heylandkreis.png}{8cm}{Heylandkreis mit Leistungs- und
+    	\abb{images/Heylandkreis.png}{8cm}{Heylandkreis mit Leistungs- und
     	Momenteneinteilung}
     \end{minipage}
 	\begin{minipage}{8cm}
-		\abb{Bilder/Heylandkreis_schlupf.png}{7cm}{Heylandkreis mit
+		\abb{images/Heylandkreis_schlupf.png}{7cm}{Heylandkreis mit
 		Schlupfskalierung}
     \end{minipage}\\
 	\begin{minipage}{10.5cm}
@@ -592,8 +592,8 @@ Abbildung \arabic{abbildungen}: #3
     \end{enumerate}
     \end{minipage}
 	\begin{minipage}{7cm}
-    	\includegraphics[width=6cm]{../ElMasch/bilder/StromortskurveDAM.png}\\
-    	\includegraphics[width=8cm]{../ElMasch/bilder/OssannakreisPkipp.png}
+    	\includegraphics[width=6cm]{../ElMasch/images/StromortskurveDAM.png}\\
+    	\includegraphics[width=8cm]{../ElMasch/images/OssannakreisPkipp.png}
     \end{minipage}
 
         
