--- a/ElMasch.tex
+++ b/ElMasch.tex
@@ -34,242 +34,8 @@ Abbildung \arabic{abbildungen}: #3
 
 \input{sections/10-Grundlagen}
 \input{sections/20-GSM}
-\input{sections/30-DSM}
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%Synchronmotor
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\section{Drehstrom- Synchronmaschinen(DSM)}
-	\subsection{Aufbau der DSM}
-		\includegraphics[width=12cm]{./images/Aufbau_DSM.png}\\
-		\begin{tabular}{ p{1cm} p{4cm} p{10cm}}
-			- & Innenpolmaschine: & Der Läufer ist ein Dauermagnet, oder wird mit
-			Gleichstrom und über Schleifer zu einem solchem gemacht. Dieser läuft mit dem aussen
-			alsiegendem Drehfeld mit\\
-			- & Aussenpolmaschine: & Der Läufer erzeugt ein Drehfeld, welches sich immer
-			am konstanten Statorfeld ausrichtet. Worauf sich des Läufer dreht\\
-			- & Turbomaschine: & Die Schleiferlose Variante. Mit Hilfe eines
-			Hilfsgenerator auf der gleichen Welle wird ein Drehstrom erzeugt, welcher
-			auf dem Läufer selbst gleichgerichtet wird. Damit wird dan ein konstantes
-			Magnetfeld (Dauermagnet) erzeugt (wie die Innenpolmaschine)\\
-		\end{tabular}
-	\subsection{Ersatzschaltbild}
-		\begin{minipage}{11cm}
-			\abb{images/Ersatz_DSM.png}{8cm}{Ersatzschaltung DSM}    
-			Es gibt 2 Unterteilungen:\\
-			\begin{tabular}{p{1cm} p{9cm}}
-			    -& Wirkleistung: Gibt die DSM leistung ab oder nimmt sie auf. Zu erkennen
-			    ist das am Phasenwinkel zwischen $U_{KL}$ und $U_P$. Ist $U_P$ voreilend, so ist
-				es ein \textbf{Generator}, anderseits ein \textbf{Motor}.\\
-				-& Blindleistung: Blindleistung Auf- oder Abgabe. Bei
-				\textbf{Übererregung} oder auch \textbf{kapazitiven Betrieb} gibt der
-				DSM Blindleistung ab. Bei \textbf{Untererregung} oder auch \textbf{induktiven Betrieb} nimmt er auf.\\
-			\end{tabular}
-	    \end{minipage}
-		\begin{minipage}{8cm}
-	    	\abb{images/Zeigerdiagram.png}{6cm}{Betriebszustände einer DSM}
-	    \end{minipage}\\
-	
-	\subsection{Betriebsverhalten}
- 		\begin{tabular}{l l l l}
- 	        Leerlauf&	
- 	        \begin{minipage}{5cm}
- 	        	\abb{images/Leerlaufkennlinie.png}{4cm}{Im Betriebspunkt
- 	        	liniarisierte Leerlaufgerade}
- 	        \end{minipage} &
- 			$I_E = \frac{U_P \cdot \sqrt{3} \cdot I_{E0N}}{U_N}$ &
- 			\begin{minipage}{9cm}
- 	       		Die Formel ist für die liniarisierte Gerade\\
- 	           	$I_E: $Erregerstrom\\
- 	           	$U_P: $verkettete Nennspannung des DS- Netzes\\
- 	           	$I_{E0N}:$Leerlauferregerstrom für Nennspannung
- 	        \end{minipage}\\
-		\end{tabular}\\
-\\
-		\begin{tabular}{l l l l}
- 			Kurzschluss &
- 			\begin{minipage}{5cm}
-             	\abb{images/Kurzschlussgerade.png}{4cm}{Kurzschlussgerade}
-            \end{minipage}&
- 			$X_d=\frac{U_P}{I_{K0}}$ &
- 			\begin{minipage}{9cm}
-             	Gilt unter Vernachlässigung des Wicklungswiderstand\\
-             	Die Kurzschlussgerade ist liniar
-            \end{minipage}\\
- 		\end{tabular}
-		
-		
-			
-		\subsubsection{Inselbetrieb}
-			\begin{minipage}{10cm}
-            
-            	\abb{images/Belastungskennlinie_DSM.png}{9cm}{Belastungskennlinie bei konst. Erregerstrom}
-            \end{minipage}
-			\begin{minipage}{6cm}
-            	\abb{images/Regulierungslinie_DSM.png}{6cm}{Regulierungskennlinie
-            	für konst. $U_{Kl}$}
-            \end{minipage}\\
-			Die Klemmenspannung nimmt bei kapazitiven Lasten zu, bei induktiven stark
-			ab. Für eine konstante $U_{Kl}$ muss der Erregerstrom wie die
-			Regulierungskennlinie angepasst werden.
-		\subsubsection{Netzbetrieb}
-			Im Netzbetrieb wird die Frequenz, Klemmenspannung, Umlaufsinn und Phasenlage
-			vom Netz vorgegeben. Das heisst bevor man mit einer DSM ans Netz will, muss man sie so
-			synchronisieren, dass alle jene Parameter mit dem Netz überreinstimmen.
-			Sind die Maschine und Netz synchronisiert und zusammengeschaltet, kann mit
-			Hilfe von $I_E$ und der mechanischen Leistung der Blindstromanteil
-			eingestellt werden:\\
-			\begin{minipage}{8.2cm}
-            	\abb{images/Ortskurve_DSM.png}{8cm}{Ortskurve einer DSM im starren
-            	Netz}
-            \end{minipage}
-			\begin{minipage}{9.7cm}
-            \begin{tabular}[c]{p{0.2cm} p{9.5cm}}
-				-& Da $U_{Kl} = U_1$ konstant ist, ist der Ursprung des Zeigers $\frac{j
-				\cdot U_p}{X_d}$ immer am gleichen Ort.\\ 
-				-& Mit dem Erregerstrom kann man die Länge des Zeigers $\frac{j \cdot
-				U_p}{X_d}$ einstellen.\\
-				-& Die mechanische Leistung ist proportional zum Abstand der
-				Zeigerspitze zur Imaginärachse. \\
-				-& Die Blindleistung ist proportional zum Abstand  der
-				Zeigerspitze zur Reelenachse.\\
-				-& Ist nun die mechanische Leistung konstant und man ändert den
-				Erregerstrom, so wandert die Zeiger auf einer Linie parallel zur Imag-Achse hin und her.\\
-				-& Überschreitet der Zeiger die Stabilitätslinie, schlipft der Läufer durch
-				und es gibt grosse Lärm- und Wärmeentwicklung, da die mechanische Leistung zu
-				gross wird für den Erregerstrom.\\
-				-& Bleibt der Erregerstrom konstant und die mechanische Leistung ändert
-				sich, so wandert der Zeiger auf dem Kreis um (0,$\frac{U_Kl}{j \cdot X_d}$).
-				Jedoch wiederum nur bis zur Stabilitätsgrenze, da dort die Wirkleistung für
-				diesen Erregerstrom maximal ist.         
-             \end{tabular}	
-			 \end{minipage}\\
-\\
-			\\
-			$U_P = \sqrt{\frac{U^2_{Netz}}{3} + X_d^2 \cdot I^2 + 2 \cdot
-			\frac{U_{Netz}}{\sqrt{3}}\cdot X_d \cdot I \cdot \sin(\varphi)}$
-	
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%Asynchronmotor
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newpage
-
-\section{Drehstrom- Asynchronmaschinen (DAM)}
-	\subsection{Aufbau der DAM}
-		\begin{tabular}[c]{| p{3cm} | p{5cm} | p{4cm} | p{5cm} |}
-        \hline
-        Name & Aufbau & Positiv & Negativ\\
-        \hline
-        Schleifringläufer	& Ständerwicklung und Läuferwicklung sind für
-        Drehfelder gewickelt. Die Läuferwicklunganschlüsse sind rausgezogen, um
-        einem Widerstand einzuschliessen.
-        & Mit deiesem Widerstand lässt sich die Drehzahl regulieren
-        & Die Schleifkontakte reduzieren den Wirkungsrad und erhöhen den
-        Verschleiss.\\
-        \hline
-        Kurzschlussläufer / Käfigläufer &
-        Die Läuferwicklungen sind immer kurzgeschlossen.
-        & Es kann ein beinahge reibungsloser und verschleisfreier Betrieb
-        ermöglicht werden
-        & Die Drehzahl ist beinahe die Drehfeldfrequenz durch die Polzahl\\
-        \hline
-        \end{tabular}
- 	\subsection{Funktionsprizip} 
- 		Das vom Ständer erzeugter Drehfeld erzeugt im
- 		stillstehenden, kurzgeschlossenen Läufer einen Drehstrom. Der Schlupf
- 		ist bei einem stillstehendem Läufer 1. Dieser Drehstrom erzeugt im Läufer ein
- 		Drehmoment. Dieses Drehmoment beschleunigt den Läufer.Durch verringert sich
- 		Schlupf, was wiederum ein kleineres Drehmoment nachsichtzieht.
- 		Bei einem Läufergeschwindigkeit, welche gelcih schnell ist wie das
- 		Drehfeld, reslutiert eine relative Geschwindigkeit von 0
- 		(Schlupf von 0)$\rightarrow $ kein Drehmoment. Das heisst der DAM bewegt
- 		sich immer mit möglichst kleinem Schlupf.
-	\subsection{Ersatzschaltbild}
-		Da der DAM nach dem Induktionsgesetz funktionniert, kann man ihn gut als
-		Trafo- Ersatzschaltbild darstellen. Der veränderliche Wirkwiderstand
-		(Lastwiderstand) ist die mechanische Last. Das heisst die Verlustleistung
-	 über dem Widerstand ist die Mechanische Nutzleistung (minus die
-	 Reibungsverluste). Diese ist, wie man sieht von dem Schlupf abhnängig.
-		\abb{images/ersatzschaltbild_DAM}{12cm}{Ersatzschaltbild des DAM mit Last}
-		
-	für Dreieckschaltung:\\
-	\begin{tabular}{p{3cm} p{13cm}}
-    	Kippmoment: & $M_k= Faktor \cdot M_N$\\
-    	Kloss`sche Gleichung: &$\frac{M}{M_k}=\frac{2 s s_k}{s^2+s_k^2} $\\
-    \end{tabular}\\
-	\begin{tabular}{p{3cm} p{13cm}}
-    	für Sternschaltung: & $M_{Stern}= \frac{M_\Delta}{3}$
-    \end{tabular}
-	       
-	\subsection{Drehmomentkennlinie}
-		\begin{minipage}{5cm}
-        	\abb{images/Drehmomentkenn_DAM.png}{5cm}{$M = f(s)$}   
-        \end{minipage}
-		\begin{minipage}{13cm}
-        	$M_K = Kippmoment = Maximales Drehmoment$\\
-        	$M_K \approx \frac{3 \cdot U_1^2}{4\cdot \pi \cdot n_1 \cdot
-        	X_\sigma}$\\
-        	$X_\sigma = X_{\sigma 1} + X_{\sigma 1}^`$\\
-        	$\frac{M}{M_K}\approx \frac{2}{\frac{s}{s_k}+\frac{s_k}{s}}$\\
-        	$s_k = \frac{R_2^`}{\sqrt{R_1^2 + X_1^2}} \approx
-        	\frac{R_2^`}{X_\sigma}$
-        	
-        \end{minipage}
-    	
-\newpage
-	\subsection{Ortskurve des DAM, Heyland- Kreis}
-	\begin{minipage}{9cm}
-    	\abb{images/Heylandkreis.png}{8cm}{Heylandkreis mit Leistungs- und
-    	Momenteneinteilung}
-    \end{minipage}
-	\begin{minipage}{8cm}
-		\abb{images/Heylandkreis_schlupf.png}{7cm}{Heylandkreis mit
-		Schlupfskalierung}
-    \end{minipage}\\
-	\begin{minipage}{10.5cm}
-	\begin{enumerate}	  
-
-          \item Den Massstab für den Strom wählen zB. $m_I=\frac{0.2 A}{mm}$
-
-          \item Den Massstab für die Leistung berechnen: $P_{gesamt}=3U_N
-          I_{Ph}$ $m_P=3U_N m_I$
-          \item Den Massstab für das Drehmoment berechnen:
-          $M=\frac{P_\delta}{2\pi n_0};$  $m_M= \frac{p\cdot m_P}{2\pi f}$  p =
-          Polpaar
-
-          \item $s=0 \rightarrow s_{0}$ messen und einzeichnen
-          \item $s=1 \rightarrow s_{1}$ messen und einzeichnen
-          \item Verlustleistung bei $s_{0}$ herauslesen ($P_{Fe}$) (ev. wenn
-          nicht schon getan, mit \\ $P_{FE} = U \cdot I_{Wirk}$ den
-          Leistungs-Massstab bestimmen.)\\
-          \item $\perp$ vom Mittelpunkt von $\overline{s_{0}s_{1}}$
-          \item Schnittpunkt auf $s_{0}- Achse (Richtung -j) = M$
-          \item Kreis um M mit Schnittpunkt $s_{0}$ und $s_{1}$
-          \item $I_N =$ Tangente auf dem Kreis vom Ursprung (0,0)
-          \item $P_{v1}$ bei $s_{1}$ ausrechnen = $P_{R_1}$ von der Parallele zur J-Achse, welche durch M geht nach oben
-          abtragen.
-          \item Verbindung des Punktes zu $s_{0}$ verlängern $\rightarrow$
-          		$s_{\infty}$
-          \item \textit{ Bei Vereinfachung $R_{Cu}=0:\\ s_{0}$ auf Imaginär- Achse;
-          		$s_{\infty}$ auf Imaginär-Achse}
-          \item Schlupf- Skalierung: $\perp$ auf $\overline{s_{\infty}M}$
-          \item Schnittpunkt mit Verlängerung $\overline{s_{1}s_{\infty}}= 1$
-          \item Schnittpunkt mit $\overline{s_{0}s_{\infty}}= 0$
-          \item Dazwischen lineare Unterteilung
-    \end{enumerate}
-    \end{minipage}
-	\begin{minipage}{7cm}
-    	\includegraphics[width=6cm]{../ElMasch/images/StromortskurveDAM.png}\\
-    	\includegraphics[width=8cm]{../ElMasch/images/OssannakreisPkipp.png}
-    \end{minipage}
-
-        
-		
-% 		
-% 		
-% \section{Persönliche Zusammenfassung}
-% 4 A4-Blätter als Zusammenfassung/Formelsammlung.
+\input{sections/30-DSMGrundlagen}
+\input{sections/40-DSM}
+\input{sections/50-DAM}
 
 \end{document}
