--- a/sections/10-Grundlagen.tex
+++ b/sections/10-Grundlagen.tex
@@ -106,5 +106,5 @@
         \end{tabular}
         \renewcommand{\arraystretch}{1.5}	
         
-        \subsection{Übersicht über Motorenarten}
-        \abb{images/uebersicht_el.png}{11cm}{Prinzipieller Aufbau El. Maschinen}
+        \subsection{Übersicht über die Motorenarten}
+        \abb{images/uebersicht_el.png}{11cm}{}
