--- a/sections/20-GSM.tex
+++ b/sections/20-GSM.tex
@@ -1,12 +1,13 @@
 \section{Gleichstrommaschinen (GSM)}
     \subsection{Funktionsprinzip}
-    Ein Gleichstrom ist im Prinzip eigendlich nur eine stromdurchflossene Schleife, welche sich in einem Magnetfeld befindet. \\
-    Durch die Lorenzkraft wirkt auf die Schleife ein Drehmoment, welche sie in eine maximal halbe Drehung versetzt. Danach muss man den Schleifenstrom umpolisieren, um die Drehung weiter zu führen. \\
+    Ein Gleichstrom ist im Prinzip eigendlich nur eine stromdurchflossene Schleife, welche sich in einem Magnetfeld
+    befindet. \\
+    Durch die Lorenzkraft wirkt auf die Schleife ein Drehmoment, welche sie in eine maximal halbe Drehung versetzt.
+    Danach muss man den Schleifenstrom umpolisieren, um die Drehung weiter zu führen. \\
     \abb{images/GSM_Funktion.png}{14cm}{Funktion eines GSM mit Stromwender}
     \abb{images/GSM_Ersatz.png}{14cm}{Erstzschema der 4 Schaltungsarten}
-    A1,A2: Ankerwicklung, B1,B2: Wendepolwicklung, C1,C2: Kompensationswicklung, \\
-    D1,D2: Reihenschlusswicklung, E1,E2: Nebenschlusswicklung, F1,F2: Fremderregte Wicklung \\
-    Um ein gleichmässiges Drehmoment erreichen zu können, kann folgende Wicklung angewendet werden\\
+    \textbf{A1-A2:} Ankerwicklung, \textbf{B1-B2:} Wendepolwicklung, \textbf{C1-C2:} Kompensationswicklung, \\
+    \textbf{D1-D2:} Reihenschlusswicklung, \textbf{E1-E2:} Nebenschlusswicklung, \textbf{F1-F2:} Fremderregte Wicklung \\
     \begin{minipage}{10cm}
         \abb{images/GSM_Wicklungen}{9.5cm}{Entstehung eienr Schleifenwicklung}
     \end{minipage}
