--- a/sections/10-Grundlagen.tex
+++ b/sections/10-Grundlagen.tex
@@ -92,7 +92,14 @@
             $m$, $ m_e = 9,11 \cdot 10^{-31} kg$ \\
             \hline
             Spannung &
-            $U = L \cdot \frac{di}{dt}=N \cdot B \cdot l \cdot v$ &
+            \renewcommand{\arraystretch}{1}
+            $U = L \cdot \frac{di}{dt}= \frac{z}{2\cdot A} \cdot B \cdot l \cdot v$ \quad 
+            \begin{array}[t]{ll}
+                z & Anz. EL \\
+                A & Anz. paralleller L.
+            \end{array}
+            \renewcommand{\arraystretch}{2}
+            &
             V \\
             \hline
             Wirkungsgrad &
