Issue #10 zum zweiten

--- a/sections/10-Grundlagen.tex
+++ b/sections/10-Grundlagen.tex
@@ -1,6 +1,6 @@
 \section{Generelle Eigenschaften el. Maschinen}
     \subsection{Generelle Formeln von el. Maschinen}
-        \renewcommand{\arraystretch}{2}
+        \renewcommand{\arraystretch}{1.8}
         \begin{tabular}[c]{ | p{5cm} | p{8cm} | p{4cm} | }
             \hline
             \textbf{Name} &
@@ -98,7 +98,7 @@
                 z & Anz. EL \\
                 A & Anz. paralleller L.
             \end{array}
-            \renewcommand{\arraystretch}{2}
+            \renewcommand{\arraystretch}{1.8}
             &
             V \\
             \hline
@@ -107,7 +107,7 @@
             - \\
             \hline
             Verluste: &
-            Hysterese $\sim f \cdot B^2$ \qquad Wirbelstrom $\sim f^2 \cdot B^2$ \qquad Lüfter $ \sim n^3$ \qquad\qquad Erreger $ = I_E ^2 \cdot R_e $ &
+            Eisen = Hysterese + Wirbelstrom \qquad Hysterese $\sim f \cdot B^2$ \qquad Wirbelstrom $\sim f^2 \cdot B^2$ \qquad Lüfter $ \sim n^3$ \qquad\qquad Erreger $ = I_E ^2 \cdot R_e $ &
             \\
             \hline
         \end{tabular}
