--- a/sections/20-GSM.tex
+++ b/sections/20-GSM.tex
@@ -80,6 +80,7 @@
         \renewcommand{\arraystretch}{1.5}
         
     \subsection{Reihenschluss Maschine}
+    Auch bekannt als Seriemaschine oder Hauptschlussmaschine\\
         \renewcommand{\arraystretch}{2}
         \begin{tabular}[c]{ | p{6cm} | p{9cm} |}
             \hline
@@ -88,6 +89,12 @@
             \hline
             Anlaufstrom &
             $I_A=\frac{U_N}{\sum R_a}=\frac{U_N I_N^2}{U_N I-P_N}$ \\
+            \hline
+            & $M_{el}=\frac{L_e}{N_e}k_1\cdot I_a^2$\\
+            \hline
+            Leerlaufdrehzahl &
+            $\omega_m=\frac{N_e}{L_e}\frac{U_a}{k_1I_a}-\frac{N_e}{L_e}\frac{R_a+R_e}{k_1}=\frac{\sqrt{N_e}\cdot
+            U_a}{\sqrt{L_ek_1M_{el}}}-\frac{N_e}{L_e}\frac{R_a+R_e}{k_1}$\\
             \hline
         \end{tabular}
         \renewcommand{\arraystretch}{1.5}
