Fehler dot zu cdot behoben

--- a/sections/20-GSM.tex
+++ b/sections/20-GSM.tex
@@ -35,7 +35,7 @@
     	= Maschinenkonstante$\\
     	\hline
     	& $M_{el}=M_{Welle}+M_{Reibung}+J\cdot\frac{d\omega_{mech}}{dt}=k_1\cdot
-    	\Phi\dot I_a$\\
+    	\Phi\cdot I_a$\\
     	\hline
     	& $\Phi = \frac{L_e}{N_e}\cdot I_e$\\
     	\hline
