sin phi in varphi umbennent passt so besser

--- a/sections/40-DSM.tex
+++ b/sections/40-DSM.tex
@@ -44,7 +44,7 @@
     	Lastabhängiger Erregerstrom & $\frac{I_E}{I_{E0N}}=\frac{U_p}{U_{Kl}}$\\
     	\hline
     	Polradspannung & $U_p=\sqrt{U_{Kl}^2+X_d^2\cdot I^2+2\cdot U_{Kl}\cdot
-    	X_d \cdot I\cdot sin\phi}$\\
+    	X_d \cdot I\cdot sin \varphi}$\\
     	\hline
     	Polradwinkel gem. ESB & $\vartheta$\\
     	\hline
