--- a/sections/40-DSM.tex
+++ b/sections/40-DSM.tex
@@ -34,6 +34,8 @@
     	Drehfeldzahl $[s^{-1}]$ bzw $[min^{-1}]$ & $n_d=\frac{f}{p}$ bzw
     	$n_d=\frac{f\cdot 60}{p}$\\
     	\hline
+    	Polpaarzahl & $p$ \\
+    	\hline
     	Schlupf $[-]$ & $s=\frac{n_d-n}{n_d}$\\
     	\hline
     	Strang- bzw. Phasenspannung &
