Nenndrehzahl in Fequenz geaendert

--- a/sections/20-GSM.tex
+++ b/sections/20-GSM.tex
@@ -20,7 +20,7 @@
     	\hline
     	Umfangsgeschwindigkeit & $v_u=\omega\cdot R = 2\pi\cdot n \cdot
     	R=\frac{2\pi\cdot f \cdot R}{p}=2\cdot f \cdot \tau_p$\\
-    	 & Geometrisch: $v=d\cdot\pi\cdot n$\\
+    	 & Geometrisch: $v=d\cdot\pi\cdot f$\\
     	\hline
     	Teilspannung eines Leiters & $U_{iL}=2\cdot \tau_p \cdot f \cdot l \cdot
     	B_m= 2\cdot f\cdot \Phi = 2\cdot p \cdot n \cdot \Phi$\\
