GSM induzierte Ankerspannune erweitert

--- a/sections/20-GSM.tex
+++ b/sections/20-GSM.tex
@@ -28,7 +28,7 @@
     	Gesamtspannung & $U_i=\frac{z}{2\cdot a}\cdot U_{iL}=\frac{z}{a}\cdot \cdot
     	p \cdot n \cdot \Phi=k_1\cdot\Phi\cdot n$\\
     	\hline
-    	Ankerspannung & $U_a=R_a\cdot I_a + L_a\frac{dI_a}{dt}+U_i$\\
+    	Ankerspannung & $U_a=R_a\cdot I_a + L_a\frac{dI_a}{dt}+U_i = U_i + U_{BK} + I_{AN} \cdot R_A$ \\
     	\hline
     	Erregerspannung & $U_e=R_e\cdot I_e + L_e\frac{dI_e}{dt}$\\
     	\hline
