--- a/ElMasch.tex
+++ b/ElMasch.tex
@@ -5,7 +5,7 @@
 
 % Header
 \include{header/header}
-
+\usepackage{tikz}
 
 % Setzt ein zentriertes Bild mit Beschriftung --> DANKE UELI!!!
 % Syntax: \abb{Pfad zum Bild}{Bildgrösse}{Beschriftung des Bildes}
