trigo formeln aus idiotenseite included

--- a/ElMasch.tex
+++ b/ElMasch.tex
@@ -26,4 +26,5 @@ Abbildung \arabic{abbildungen}: #3
 \input{sections/40-DSM}
 \input{sections/50-DAM}
 \input{sections/60-Antriebstechnik}
+\input{idiotenseite/trigo/subsections/Dreiecksformeln}
 \end{document}
