Allgemeine Drehzal Drehmoment Kennlinie

--- a/sections/30-DSMGrundlagen.tex
+++ b/sections/30-DSMGrundlagen.tex
@@ -78,11 +78,16 @@
 
     \subsubsection{Schlupf}
         Als Schlupf bezeichnet man die Beziehung zwischen Drehfelddrehzahl und Läuferdrehzahl. Sie wird mit folgender Formel beschrieben: \\
-        \begin{minipage}{8cm}
+        \begin{multicols}{2}
             $Schlupf = s = \frac{n_d - n}{n_d}$ \\
             Das heisst bei einer Läuferdrehzahl $<$ $n_d$ in Drehfeldrichtung ist der Schlupf 0 $<$ s $<$ 1
-        \end{minipage}
-        \begin{minipage}{9cm}
+        \columnbreak
+        
             \abb{images/Schlupfgerade.png}{4cm}{Schlupfgerade}
-        \end{minipage}
+        \end{multicols}
+        
+	\subsubsection{Drehzahl-Drehmoment Kennlinie}
+		\begin{center}
+			\includegraphics[width=0.4\textwidth]{images/Mn-Kennlinien.png}
+		\end{center}        
     \newpage
