Hosannakreisanleitung V2 geschrieben, kleine Formelupdates

--- a/sections/20-GSM.tex
+++ b/sections/20-GSM.tex
@@ -19,21 +19,21 @@
     \begin{tabular}[c]{ | p{6cm} | p{9cm} |}
     	\hline
     	Umfangsgeschwindigkeit & $v_u=\omega\cdot R = 2\pi\cdot n \cdot
-    	R=\frac{2\pi\cdot f \cdot R}{p}=2\cdot f \cdot \tau_p$\\
+    	R=\frac{2\pi\cdot f \cdot R}{p}=2\cdot f \cdot \tau_p = d\cdot\pi\cdot n$\\
     	 & Geometrisch: $v=d\cdot\pi\cdot f$\\
     	\hline
     	Teilspannung eines Leiters & $U_{iL}=2\cdot \tau_p \cdot f \cdot l \cdot
     	B_m= 2\cdot f\cdot \Phi = 2\cdot p \cdot n \cdot \Phi$\\
     	\hline
-    	Gesamtspannung & $U_i=\frac{z}{2\cdot a}\cdot U_{iL}=\frac{z}{a}\cdot \cdot
+    	Gesamtspannung & $U_i=\frac{z}{2\cdot a}\cdot U_{iL}=\frac{z}{a}\cdot
     	p \cdot n \cdot \Phi=k_1\cdot\Phi\cdot n$\\
     	\hline
     	Ankerspannung & $U_a=R_a\cdot I_a + L_a\frac{dI_a}{dt}+U_i = U_i + U_{BK} + I_{AN} \cdot R_A$ \\
     	\hline
     	Erregerspannung & $U_e=R_e\cdot I_e + L_e\frac{dI_e}{dt}$\\
     	\hline
-    	Induzierte Spannung & $U_i = k_1\cdot \Phi \cdot \omega_{mech} \quad k_1
-    	= Maschinenkonstante$\\
+    	Induzierte Spannung & $U_i = k_1\cdot \Phi \cdot \omega_{mech} = B\cdot l
+    	\cdot v \quad k_1 = Maschinenkonstante$\\
     	\hline
     	& $M_{el}=M_{Welle}+M_{Reibung}+J\cdot\frac{d\omega_{mech}}{dt}=k_1\cdot
     	\Phi\cdot I_a$\\
