--- a/sections/50-DAM.tex
+++ b/sections/50-DAM.tex
@@ -109,3 +109,42 @@
             \includegraphics[width=6cm]{../ElMasch/images/StromortskurveDAM.png}\\
             \includegraphics[width=8cm]{../ElMasch/images/OssannakreisPkipp.png}
         \end{minipage}
+        
+    \subsection{Orskurve des DAM, Heyland-Kreis 2. Anleitung}
+    \begin{enumerate}
+      \item Daten für Leerlauf und (echten) Kurzschluss der DAM verifizieren
+      bzw. berechnen
+      \item Massstäbe festlegen
+      \begin{enumerate}
+        \item Strommassstab $m_{I_{Ph}}$ Wählen bzw. Tipp befolgen
+        \item Leistungsmassstab $m_{P_{gesamt}}=3U_{Ph}\cdot m_{I_{Ph}}$
+        \item Drehmomentsmassstab $m_M=\frac{m_{P_{gesamt}}}{2\pi n_0} =
+        \frac{m_{P_{gesamt}}\cdot p}{2\pi f}$
+      \end{enumerate}
+      \item Leerlaufpunkt $(s=0)$ aus $P_0$ und $I_0$ bestimmen und in die
+      Grafik $U_{ph},-jI_{Ph}$ eintragen
+      \item Anlaufpunkt $(s=0)$ aus $P_{KS}$ und $I_{KS}$ bestimmen und in die
+      Grafik $U_{ph},-jI_{Ph}$ eintragen
+      \item Mittelpunkt der Strecke (Anlaufpunkt-Leerlaufpunkt) bestimmen und
+      Ossanakreis zeichnen
+      \item Bremspunkt $s=\infty$ zeichnen je nach Aufgabenstellung
+      \begin{enumerate}
+        \item Anlaufmoment = lotrechte Strecke ausgehend vom Anlaufpunkt $(s=1)$
+        \item Verluste im Rotor und Stator $\rightarrow$ lotrechte Strecke
+        ausgehend vom Anlaufpunkt $(s=1)$. Tipp: $V=3\cdot I^2\cdot R$
+      \end{enumerate}
+      \item Schlupfgerade
+      \begin{enumerate}
+        \item Senkrechte zur Strecke M-Bremspunkt
+        \item Skalieren: Schnittpunkt mit der Strecke
+        (Bremspunkt-Leerlaufpunkt) ist bei $s=1$
+      \end{enumerate}
+      \item $s_N$ einzeichnen je nach Aufgabenstellung
+      \begin{enumerate}
+        \item Bei Nennstrom gegeben: Kreis mit Stromlänge um Ursprung
+        \item Bei Nennleistung gegeben: Senkrechte mit Länge der Leistung
+        zwischen Leistungslinie und Ossanakreis
+        \item Bei Nennmoment gegeben: Senkrechte mit Lände des Moments zwischen
+        Momentenlinie und Ossanakreis
+      \end{enumerate}
+    \end{enumerate}   
