--- a/sections/40-DSM.tex
+++ b/sections/40-DSM.tex
@@ -42,6 +42,7 @@
     \subsection{Allgemeine Formeln}
     \begin{tabular}[c]{ | p{7cm} | p{8cm} |}
     	\hline
+    	Polpaarzahl	& $p$\\
     	Drehfeldzahl $[s^{-1}]$ bzw $[min^{-1}]$ & $n_d=\frac{f}{p}$ bzw
     	$n_d=\frac{f\cdot 60}{p}$\\
     	\hline
@@ -50,7 +51,9 @@
     	Schlupf $[-]$ & $s=\frac{n_d-n}{n_d}$\\
     	\hline
     	Strang- bzw. Phasenspannung &
-    	$\underline{U}_{kl}=\underline{U}_p+jX_d\cdot\underline{I}$\\
+    	$\underline{U}_{kl}=\underline{U}_p+U_{XD}$\\
+    	\hline
+    	Spannungsfall über Synchroner Reaktanz & $U_{XD}=jX_d\cdot\underline{I}$\\
     	\hline
     	Leerlauferregerstrom für Nennspannung & $I_{E0N}$\\
     	\hline
@@ -59,7 +62,7 @@
     	Polradspannung & $U_p=\sqrt{U_{Kl}^2+X_d^2\cdot I^2+2\cdot U_{Kl}\cdot
     	X_d \cdot I\cdot sin \varphi}$\\
     	\hline
-    	Polradwinkel gem. ESB & $\vartheta$\\
+    	Polradwinkel gem. ESB & $\vartheta = arg(Up)$\\
     	\hline
     	Wirkleistung des DSG & $P_{el}=3\cdot
     	U_{Kl}\cdot\frac{U_p}{X_d}\sin\vartheta$\\
