noch eine formel

--- a/sections/20-GSM.tex
+++ b/sections/20-GSM.tex
@@ -26,7 +26,7 @@
     	B_m= 2\cdot f\cdot \Phi = 2\cdot p \cdot n \cdot \Phi$\\
     	\hline
     	Gesamtspannung & $U_i=\frac{z}{2\cdot a}\cdot U_{iL}=\frac{z}{a}\cdot
-    	p \cdot n \cdot \Phi=k_1\cdot\Phi\cdot n$\\
+    	p \cdot n \cdot \Phi=k_1\cdot\Phi\cdot n = B_m \cdot z \cdot l \cdot v$\\
     	\hline
     	Ankerspannung & $U_a=R_a\cdot I_a + L_a\frac{dI_a}{dt}+U_i = U_i + U_{BK} + I_{AN} \cdot R_A$ \\
     	\hline
