Riiiiisaschweiss Heylandkreis und Hosanna in der Hoehe eingefuegt. Danke Juerg

--- a/ElMasch.tex
+++ b/ElMasch.tex
@@ -6,6 +6,9 @@
 % Header
 \include{header/header}
 \usepackage{tikz}
+\usetikzlibrary{intersections}
+\usetikzlibrary{calc}
+\usetikzlibrary{through}
 
 % Setzt ein zentriertes Bild mit Beschriftung --> DANKE UELI!!!
 % Syntax: \abb{Pfad zum Bild}{Bildgrösse}{Beschriftung des Bildes}
