--- a/sections/50-DAM.tex
+++ b/sections/50-DAM.tex
@@ -109,7 +109,7 @@
             \includegraphics[width=6cm]{../ElMasch/images/StromortskurveDAM.png}\\
             \includegraphics[width=8cm]{../ElMasch/images/OssannakreisPkipp.png}
         \end{minipage}
-        
+        \newpage
     \subsection{Orskurve des DAM, Heyland-Kreis 2. Anleitung}
     \begin{enumerate}
       \item Daten für Leerlauf und (echten) Kurzschluss der DAM verifizieren
@@ -148,3 +148,8 @@
         Momentenlinie und Ossanakreis
       \end{enumerate}
     \end{enumerate}   
+
+		\begin{sideways}
+		
+    \input{tikz/Heyland.tex}
+		\end{sideways}
