Formel GSM Ideales Luftspalt Drehmoment

--- a/sections/20-GSM.tex
+++ b/sections/20-GSM.tex
@@ -40,7 +40,11 @@
     	\hline
     	& $\Phi = \frac{L_e}{N_e}\cdot I_e$\\
     	\hline
-    	Ideale Luftspaltleistung & $P_{Luft}=U_i\cdot I_A$\\
+    	Ideale Luftspaltleistung & 
+    		$P_{Luft}=U_i\cdot I_A$\\
+    	\hline
+    	Ideales Luftspaltderhmoment & 
+    		$M_{Luft} = N \cdot B \cdot I \cdot d \cdot l$ \\
     	\hline
     	Mech. Leistung an der Welle &
     	$P_{Welle}=P_{Luft}-V_{Fe}-V_{Reib}-V_{zus}$\\
