Leistung mit Drehmoment

--- a/sections/20-GSM.tex
+++ b/sections/20-GSM.tex
@@ -41,7 +41,7 @@
     	& $\Phi = \frac{L_e}{N_e}\cdot I_e$\\
     	\hline
     	Ideale Luftspaltleistung & 
-    		$P_{Luft}=U_i\cdot I_A$\\
+    		$P_{Luft}=U_i\cdot I_A = M_{Luft} \cdot \omega $\\
     	\hline
     	Ideales Luftspaltderhmoment & 
     		$M_{Luft} = N \cdot B \cdot I \cdot d \cdot l$ \\
