Ohmsche Leistung aus idiotenseite

--- a/ElMasch.tex
+++ b/ElMasch.tex
@@ -29,5 +29,9 @@ Abbildung \arabic{abbildungen}: #3
 \input{sections/40-DSM}
 \input{sections/50-DAM}
 \input{sections/60-Antriebstechnik}
+
+\section{Idiotenseite}
+Genau du bruchsch dia!
 \input{idiotenseite/trigo/subsections/Dreiecksformeln}
+\input{idiotenseite/elektrotechnik/subsections/ohmscheLeistung}
 \end{document}
