--- a/ElMasch.tex
+++ b/ElMasch.tex
@@ -1,7 +1,7 @@
 % Dokumentinformationen
 \newcommand{\titleinfo}{Elekrische Maschinen - Formelsammlung}
 \newcommand{\authorinfo}{HSR-Stud (orig. Braun \& Co.)}
-\newcommand{\versioninfo}{$Revision: 975 $ - powered by \LaTeX}
+\newcommand{\versioninfo}{$Revision: Marie $ - powered by \LaTeX}
 
 % Header
 \include{header/header}
