Schreibfehler und Minipage entfernt

--- a/ElMasch.tex
+++ b/ElMasch.tex
@@ -10,6 +10,9 @@
 \usetikzlibrary{calc}
 \usetikzlibrary{through}
 
+\usepackage{caption}
+\usepackage{subcaption}
+
 % Setzt ein zentriertes Bild mit Beschriftung --> DANKE UELI!!!
 % Syntax: \abb{Pfad zum Bild}{Bildgrösse}{Beschriftung des Bildes}
 \newcounter{abbildungen} \stepcounter{abbildungen}
