--- a/sections/20-GSM.tex
+++ b/sections/20-GSM.tex
@@ -1,19 +1,26 @@
 \section{Gleichstrommaschinen (GSM)}
     \subsection{Funktionsprinzip}
-    Ein Gleichstrom ist im Prinzip eigendlich nur eine stromdurchflossene Schleife, welche sich in einem Magnetfeld
-    befindet. \\
+    Ein Gleichstrom ist durchfliesst ein Schleife, welche sich in einem Magnetfeld befindet. \\
     Durch die Lorenzkraft wirkt auf die Schleife ein Drehmoment, welche sie in eine maximal halbe Drehung versetzt.
     Danach muss man den Schleifenstrom umpolisieren, um die Drehung weiter zu führen. \\
     \abb{images/GSM_Funktion.png}{14cm}{Funktion eines GSM mit Stromwender}
     \abb{images/GSM_Ersatz.png}{14cm}{Erstzschema der 4 Schaltungsarten}
     \textbf{A1-A2:} Ankerwicklung, \textbf{B1-B2:} Wendepolwicklung, \textbf{C1-C2:} Kompensationswicklung, \\
     \textbf{D1-D2:} Reihenschlusswicklung, \textbf{E1-E2:} Nebenschlusswicklung, \textbf{F1-F2:} Fremderregte Wicklung \\
-    \begin{minipage}{10cm}
-        \abb{images/GSM_Wicklungen}{9.5cm}{Entstehung eienr Schleifenwicklung}
-    \end{minipage}
-    \begin{minipage}{7cm}
-        \abb{images/GSM_Drehmomentdarstellung}{6.5cm}{Alle Drehmomente zusammen ergeben ein gleichmässiges Drehmoment}
-    \end{minipage}
+    \begin{figure}
+	    \centering
+	    \begin{subfigure}[t]{0.45\textwidth}
+	    	\centering
+	    	\includegraphics[width=\textwidth]{images/GSM_Wicklungen.png}
+	    	\caption{Entstehung einer Schleifenwicklung}
+	    \end{subfigure}
+	    \begin{subfigure}[t]{0.45\textwidth}
+	    	\centering
+	    	\includegraphics[width=\textwidth]{images/GSM_Drehmomentdarstellung.png}
+	    	\caption{Alle Drehmomente zusammen ergeben ein gleichmässiges Drehmoment}
+	    \end{subfigure}
+    \end{figure}
+
     
     \subsection{Grundgleichungen}
     \begin{tabular}[c]{ | p{6cm} | p{9cm} |}
