--- a/sections/20-GSM.tex
+++ b/sections/20-GSM.tex
@@ -50,7 +50,7 @@
     	Ideale Luftspaltleistung & 
     		$P_{Luft}=U_i\cdot I_A = M_{Luft} \cdot \omega $\\
     	\hline
-    	Ideales Luftspaltderhmoment & 
+    	Ideales Luftspaltdrehmoment & 
     		$M_{Luft} = N \cdot B \cdot I \cdot d \cdot l$ \\
     	\hline
     	Mech. Leistung an der Welle &
