Formel für Drehmoment an der Welle

--- a/sections/20-GSM.tex
+++ b/sections/20-GSM.tex
@@ -56,8 +56,9 @@
     	Mech. Leistung an der Welle &
     	$P_{Welle}=P_{Luft}-V_{Fe}-V_{Reib}-V_{zus}$\\
     	\hline
-    	
-    
+    	Drehmoment an der Welle &
+    	$M_{Welle} = \frac{P_{Welle}}{\omega_n} = \frac{P_{Welle} \cdot 60}{2 \pi n}  \quad [n] = min^{-1}$  \\
+    	\hline
     \end{tabular}
     
     \subsection{Nebenschluss Maschinen}
