Drehmoment an den Richtigen Ort verschoben, Hinweis bei Verlusten

--- a/sections/20-GSM.tex
+++ b/sections/20-GSM.tex
@@ -54,10 +54,7 @@
     		$M_{Luft} = N \cdot B \cdot I \cdot d \cdot l$ \\
     	\hline
     	Mech. Leistung an der Welle &
-    	$P_{Welle}=P_{Luft}-V_{Fe}-V_{Reib}-V_{zus}$\\
-    	\hline
-    	Drehmoment an der Welle &
-    	$M_{Welle} = \frac{P_{Welle}}{\omega_n} = \frac{P_{Welle} \cdot 60}{2 \pi n}  \quad [n] = min^{-1}$  \\
+    	$P_{Welle}=P_{Luft}-V_{Fe}-V_{Reib}-V_{zus}$ \quad $V{...} =$ Verluste\\
     	\hline
     \end{tabular}
     
@@ -71,7 +68,8 @@
             $\Longrightarrow $ bei $I_E$ = 0 und $M$ = 0 $n \rightarrow \infty$ \\
             \hline
             Drehmoment &
-            $M=\frac{k_2 \cdot \Phi \cdot U_{Anker}}{R_{Anker}} - \frac{k_1 \cdot k_2 \cdot\phi^2 \cdot n}{R_A} =\frac{P_{mech}}{2\pi n_N}=\frac{U_{iN}I_N}{2\pi n_N}\sim I_E \cdot U_A - I_E ^2 \cdot n$ \\
+            $M=\frac{k_2 \cdot \Phi \cdot U_{Anker}}{R_{Anker}} - \frac{k_1 \cdot k_2 \cdot\phi^2 \cdot n}{R_A} =\frac{P_{mech}}{2\pi n_N}=\frac{U_{iN}I_N}{2\pi n_N}\sim I_E \cdot U_A - I_E ^2 \cdot n$
+            \quad Achtung: $[n] = min^{-1}$\\
             \hline
             Leistung &
             $P_{Anker}= U_i \cdot I \pm I^2 \cdot R_A $(+ bei Motor; - bei Generator) \\
